sys-utils/libcmt/include/libcmt/rollup.h

typedef struct cmt_rollup {
    union cmt_io_driver io[1];
    cmt_merkle_t merkle[1];
} cmt_rollup_t;
/** Public struct with the advance state contents */
typedef struct cmt_rollup_advance {
    uint64_t chain_id;                        /**< network */
    uint8_t app_contract[CMT_ADDRESS_LENGTH]; /**< application contract address */
    uint8_t msg_sender[CMT_ADDRESS_LENGTH];   /**< input sender address */
    uint64_t block_number;                    /**< block number of this input */
    uint64_t block_timestamp;                 /**< block timestamp of this input UNIX epoch format) */
    uint64_t index;                           /**< input index (in relation to all inputs ever sent to the DApp) */
    uint32_t payload_length;                  /**< length in bytes of the payload field */
    void *payload;                            /**< payload for this input */
} cmt_rollup_advance_t;
/** Public struct with the inspect state contents */
typedef struct cmt_rollup_inspect {
    uint32_t payload_length; /**< length in bytes of the payload field */
    void *payload;           /**< payload for this query */
} cmt_rollup_inspect_t;
/** Public struct with the finish state contents */
typedef struct cmt_rollup_finish {
    bool accept_previous_request;
    int next_request_type;
    uint32_t next_request_payload_length;
} cmt_rollup_finish_t;
/** Initialize a @ref cmt_rollup_t state.
 *
 * @param [in] me uninitialized state
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_init(cmt_rollup_t *me);
/** Finalize a @ref cmt_rollup_t statate previously initialized with @ref
 * cmt_rollup_init
 *
 * @param [in] me    initialized state
 *
 * @note use of @p me after this call is undefined behavior. */
void cmt_rollup_fini(cmt_rollup_t *me);
/** Emit a voucher
 *
 * Equivalent to the `Voucher(address,uint256,bytes)` solidity call.
 *
 * @param [in,out] me             initialized @ref cmt_rollup_t instance
 * @param [in]     address_length destination length in bytes
 * @param [in]     address        destination data
 * @param [in]     value_length   value length in bytes
 * @param [in]     value          value data
 * @param [in]     data_length    data length in bytes
 * @param [in]     data           message contents
 * @param [out]    index          index of emitted voucher, if successful
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_emit_voucher(cmt_rollup_t *me,
                            uint32_t address_length, const void *address_data,
                            uint32_t value_length, const void *value_data,
                            uint32_t length, const void *data, uint64_t *index);
/** Emit a notice
 *
 * @param [in,out] me          initialized cmt_rollup_t instance
 * @param [in]     data_length data length in bytes
 * @param [in]     data        message contents
 * @param [out]    index       index of emitted notice, if successful
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_emit_notice(cmt_rollup_t *me,
                           uint32_t data_length, const void *data, uint64_t *index);
/** Emit a report
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in]     n       sizeof @p data in bytes
 * @param [in]     data    message contents
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_emit_report(cmt_rollup_t *me,
                           uint32_t data_length, const void *data);
/** Emit a exception
 * @param [in,out] me          initialized cmt_rollup_t instance
 * @param [in]     data_length data length in bytes
 * @param [in]     data        message contents
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_emit_exception(cmt_rollup_t *me,
                              uint32_t data_length, const void *data);
/** Read advance state
 *
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in,out] advance cmt_rollup_advance_t instance (maybe uninitialized)
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_read_advance_state(cmt_rollup_t *me, cmt_rollup_advance_t *advance);
/** Read inspect state
 *
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in,out] inspect cmt_rollup_inspect_t instance (maybe uninitialized)
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_read_inspect_state(cmt_rollup_t *me, cmt_rollup_inspect_t *inspect);
/** Finish processing of current advance or inspect.
 * Waits for and returns the next advance or inspect query when available.
 *
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in,out] finish  initialized cmt_rollup_finish_t instance
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_finish(cmt_rollup_t *me, cmt_rollup_finish_t *finish);
/** Retrieve the merkle tree and intermediate state from a file @p path
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in]     file    path to file (parent directories must exist)
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_load_merkle(cmt_rollup_t *me, const char *path);
/** Store the merkle tree and intermediate state to a file @p path
 *
 * @param [in,out] me      initialized cmt_rollup_t instance
 * @param [in]     file    path to file (parent directories must exist)
 *
 * @return
 * |   |                             |
 * |--:|-----------------------------|
 * |  0| success                     |
 * |< 0| failure with a -errno value | */
int cmt_rollup_save_merkle(cmt_rollup_t *me, const char *path);