rollup-http/rollup-http-server/src/rollup/bindings.rs

#[test]
fn bindgen_test_layout_cmt_rollup_advance() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_rollup_advance> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_rollup_advance>(),
        64usize,
        concat!("Size of: ", stringify!(cmt_rollup_advance))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_rollup_advance>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_rollup_advance))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).sender) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(sender)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).block_number) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(block_number)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).block_timestamp) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(block_timestamp)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).index) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_advance),
            "::",
            stringify!(data)
        )
    );
}
#[doc = " Public struct with the advance state contents"]
pub type cmt_rollup_advance_t = cmt_rollup_advance;
#[doc = " Public struct with the inspect state contents"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cmt_rollup_inspect {
    #[doc = "< length in bytes of the data field"]
    pub length: u32,
    #[doc = "< inspect contents"]
    pub data: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_cmt_rollup_inspect() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_rollup_inspect> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_rollup_inspect>(),
        16usize,
        concat!("Size of: ", stringify!(cmt_rollup_inspect))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_rollup_inspect>(),
        8usize,
        concat!("Alignment of ", stringify!(cmt_rollup_inspect))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_inspect),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).data) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_inspect),
            "::",
            stringify!(data)
        )
    );
}
#[doc = " Public struct with the inspect state contents"]
pub type cmt_rollup_inspect_t = cmt_rollup_inspect;
#[doc = " Public struct with the finish state contents"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cmt_rollup_finish {
    pub accept_previous_request: bool,
    pub next_request_type: ::std::os::raw::c_int,
    pub next_request_payload_length: u32,
}
#[test]
fn bindgen_test_layout_cmt_rollup_finish() {
    const UNINIT: ::std::mem::MaybeUninit<cmt_rollup_finish> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cmt_rollup_finish>(),
        12usize,
        concat!("Size of: ", stringify!(cmt_rollup_finish))
    );
    assert_eq!(
        ::std::mem::align_of::<cmt_rollup_finish>(),
        4usize,
        concat!("Alignment of ", stringify!(cmt_rollup_finish))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).accept_previous_request) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_finish),
            "::",
            stringify!(accept_previous_request)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next_request_type) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_finish),
            "::",
            stringify!(next_request_type)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).next_request_payload_length) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cmt_rollup_finish),
            "::",
            stringify!(next_request_payload_length)
        )
    );
}
#[doc = " Public struct with the finish state contents"]
pub type cmt_rollup_finish_t = cmt_rollup_finish;
extern "C" {
    #[doc = " Initialize a @ref cmt_rollup_t state.\n\n @param [in] me    uninitialized state\n\n - 0 success\n - negative value on error. values from: @ref cmt_rollup_driver_init"]
    pub fn cmt_rollup_init(me: *mut cmt_rollup_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Finalize a @ref cmt_rollup_t statate previously initialized with @ref\n cmt_rollup_init\n\n @param [in] me    initialized state\n\n @note use of @p me after this call is undefined behavior."]
    pub fn cmt_rollup_fini(me: *mut cmt_rollup_t);
}
extern "C" {
    #[doc = " Emit a voucher\n\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     address destination\n @param [in]     n       sizeof @p data in bytes\n @param [in]     data    message contents\n @return\n - 0 success\n - -ENOBUFS no space left in @p me"]
    pub fn cmt_rollup_emit_voucher(
        me: *mut cmt_rollup_t,
        address_length: u32,
        address_data: *const ::std::os::raw::c_void,
        value_length: u32,
        value_data: *const ::std::os::raw::c_void,
        length: u32,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Emit a notice\n\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     n       sizeof @p data in bytes\n @param [in]     data    message contents\n @return\n - 0 success\n - -ENOBUFS no space left in @p me"]
    pub fn cmt_rollup_emit_notice(
        me: *mut cmt_rollup_t,
        length: u32,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Emit a report\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     n       sizeof @p data in bytes\n @param [in]     data    message contents\n @return\n - 0 success\n - -ENOBUFS no space left in @p me"]
    pub fn cmt_rollup_emit_report(
        me: *mut cmt_rollup_t,
        length: u32,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Emit a exception\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     n       sizeof @p data in bytes\n @param [in]     data    message contents\n @return\n - 0 success\n - -ENOBUFS no space left in @p me"]
    pub fn cmt_rollup_emit_exception(
        me: *mut cmt_rollup_t,
        length: u32,
        data: *const ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Read advance state\n\n @return\n - 0 success\n - negative value on error."]
    pub fn cmt_rollup_read_advance_state(
        me: *mut cmt_rollup_t,
        advance: *mut cmt_rollup_advance_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Read inspect state\n\n @return\n - 0 success\n - negative value on error."]
    pub fn cmt_rollup_read_inspect_state(
        me: *mut cmt_rollup_t,
        inspect: *mut cmt_rollup_inspect_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Finish processing of current advance or inspect.\n Waits for and returns the next advance or inspect query when available.\n\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in,out] finish  initialized cmt_rollup_finish_t instance\n\n @return\n - 0 success\n - negative value on error"]
    pub fn cmt_rollup_finish(
        me: *mut cmt_rollup_t,
        finish: *mut cmt_rollup_finish_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Retrieve the merkle tree and intermediate state from a file @p path\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     file    path to file (parent directories must exist)"]
    pub fn cmt_rollup_load_merkle(
        me: *mut cmt_rollup_t,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Store the merkle tree and intermediate state to a file @p path\n\n @param [in,out] me      initialized cmt_rollup_t instance\n @param [in]     file    path to file (parent directories must exist)"]
    pub fn cmt_rollup_save_merkle(
        me: *mut cmt_rollup_t,
        path: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
